--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+:root{
+  --COLOUR-ONE: #FFFFFF;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
