progress on dark mode toggle

--- a/src/components/header/headercss/PageLinks.css
+++ b/src/components/header/headercss/PageLinks.css
@@ -20,6 +20,7 @@
     justify-content: center;
     color: var(--COLOUR-ONE);
     padding-bottom: 5px;
+    text-decoration: none;
 }
 
 .Page-Link:hover{
