--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,13 @@
 :root{
   --COLOUR-ONE: #FFFFFF;
+  --COLOUR-TWO: #1A181C;
 }
+
+[data-theme="dark-mode"]{
+  --COLOUR-ONE: #1a181c;
+  --COLOUR-TWO: #FFFFFF;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
