--- a/src/components/header/headercss/PageLinks.css
+++ b/src/components/header/headercss/PageLinks.css
@@ -3,6 +3,10 @@
 /* Styles for the links in the header section*/
 
 /* link container */
+.links{
+    display: flex;
+    flex-direction: row;
+}
 .Page-Link-Container{
     width: 100px;
     height: fit-content;
@@ -10,25 +14,25 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-left:20px;
+    /*margin-left:20px;*/
 }
 
 .Page-Link{
     font-size: 20px;
-    width: 100%;
+    width: fit-content;
     display: flex;
     justify-content: center;
     color: var(--COLOUR-ONE);
-    padding-bottom: 5px;
+    padding: 5px;
     text-decoration: none;
 }
 
-.Page-Link:hover{
-    opacity: 0.5;
+.link-one{
+    border-bottom: 4px solid var(--COLOUR-ONE);
+}
+.link-two:hover, .link-one:hover{
+    border-bottom: 4px solid var(--COLOUR-ONE);
+    transition: 0.09s ease-in-out
 }
 
-.underline{
-    width: 80%;
-    border: 2px solid var(--COLOUR-ONE);
-}
 
