--- a/src/pages/pages css/search.css
+++ b/src/pages/pages css/search.css
@@ -1,19 +1,20 @@
 
 .body-container{
     width: fit-content;
+    margin-top: 10%;
 }
 
 .headline{
     width: fit-content;
     color: var(--COLOUR-THREE);
-    font-size: 40px;
+    font-size: 50px;
     border-bottom: 3px solid var(--COLOUR-ONE);
 }
 
 .bullet-points{
     color:var(--COLOUR-ONE);
-    font-size: 20px;
-    line-height: 35px;
+    font-size: 25px;
+    line-height: 40px;
 }
 .emphasis-text{
     border-bottom: 1px solid var(--COLOUR-THREE);
@@ -23,7 +24,7 @@
     grid-template-columns: auto;
     grid-template-rows: auto auto;
     width: 20em;
-    
+    margin-left:30% ;
     height: auto;
 }
 .company-name-input{
@@ -32,12 +33,13 @@
     color: var(--COLOUR-ONE);
     font-size: 15px;
     border: 2px solid var(--COLOUR-ONE); 
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
 .company-name-input::placeholder{
     font-size: 15px;
     color:var(--COLOUR-ONE);
     text-align: center;
+    font-weight:600;
 }
 .search-button{
     width: 50%;
@@ -48,5 +50,9 @@
     font-weight: 900;
     font-size: 20px;
     border: 2px solid var(--COLOUR-ONE);
+}
+
+.search-button:hover{
+    border: 2px solid lightskyblue;
 }
 
