--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
 .App {
   width: 100%;
   background-color: var(--COLOUR-TWO);
-  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
 }
 
