--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,9 @@
   --COLOUR-TWO: #1A181C;
   --COLOUR-THREE: #FF0000;
 }
+*{
+  font-size: 10px;
+}
 
 [data-theme="dark-mode"]{
   --COLOUR-ONE: #1a181c;
