clean slate for css

--- a/src/components/header/headercss/PageLinks.css
+++ b/src/components/header/headercss/PageLinks.css
@@ -7,12 +7,12 @@
 }
 
 .Page-Link{
-    font-size: 1.2rem;
     width: fit-content;
     color: var(--COLOUR-ONE);
     padding: 0.5rem;
     text-decoration: none;
     margin: 0 1rem;
+    background-color: blue;
 }
 
 .link-one{
