--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,13 @@
 .App {
   width: 100%;
+  max-width: 800px;
+  min-width: 320px;
   background-color: var(--COLOUR-TWO);
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin: 0 auto;
+  background-color: aqua;
 }
 
