--- a/src/pages/pages css/search.css
+++ b/src/pages/pages css/search.css
@@ -1,21 +1,23 @@
 
 .body-container{
-    width: fit-content;
-    margin: 0 auto;
+    width: 100%;
+    background-color: bisque;
 }
-
 .headline{
-    width: fit-content;
     color: var(--COLOUR-THREE);
-    font-size: 2rem;
     border-bottom: 3px solid var(--COLOUR-ONE);
     font-weight: 700;
+    background-color: blueviolet;
 }
 
 .bullet-points{
     color:var(--COLOUR-ONE);
     font-size: 25px;
-    line-height: 40px;
+    padding: 0;
+    width: 100%;
+    background-color: aquamarine;
+}
+.bullet-points li{
 }
 .emphasis-text{
     border-bottom: 1px solid var(--COLOUR-THREE);
@@ -24,33 +26,23 @@
     display: grid;
     grid-template-columns: auto;
     grid-template-rows: auto auto;
-    width: 20em;
-    margin-left:30% ;
-    height: auto;
-
+    width: 100%;
 }
 .company-name-input{
-    height: 2em;
     background-color: var(--COLOUR-TWO);
     color: var(--COLOUR-ONE);
-    font-size: 15px;
     border: 2px solid var(--COLOUR-ONE); 
-    margin-bottom: 20px;
 }
 .company-name-input::placeholder{
-    font-size: 15px;
     color:var(--COLOUR-ONE);
     text-align: center;
     font-weight:600;
 }
 .search-button{
-    width: 50%;
-    height: 2em;
     justify-self:end;
     background-color: var(--COLOUR-TWO);
     color: var(--COLOUR-ONE);
     font-weight: 900;
-    font-size: 20px;
     border: 2px solid var(--COLOUR-ONE);
 }
 
