--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,10 @@
+/* Global styles*/
 :root{
+  padding: 0;
+  margin: 0;
+  font-size: 10px;
+
+  /* Colour Scheme */
   --COLOUR-ONE: #FFFFFF;
   --COLOUR-TWO: #1A181C;
   --COLOUR-THREE: #FF0000;
@@ -7,18 +13,4 @@
   font-size: 10px;
 }
 
-[data-theme="dark-mode"]{
-  --COLOUR-ONE: #1a181c;
-  --COLOUR-TWO: #FFFFFF;
-}
-
-body {
-  margin: 0 ;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background-color: var(--COLOUR-TWO);
-}
 
