--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,5 @@
 /* Global styles*/
 :root{
-  padding: 0;
-  margin: 0;
   font-size: 10px;
 
   /* Colour Scheme */
@@ -10,7 +8,16 @@
   --COLOUR-THREE: #FF0000;
 }
 *{
-  font-size: 10px;
+  padding: 0;
+  margin: 0;
+}
+body{
+  background-color: var(--COLOUR-TWO);
+}
+
+#root{
+  width: min(1100px,80%);
+  margin: 0 auto;
 }
 
 
