--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,5 +1,6 @@
 .navbar{
     width: 100%;
+    padding: 1rem 0;
 }
 
 .navbar_list{
@@ -8,3 +9,30 @@
     justify-content: flex-end;
     gap: 1rem;
 }
+
+.links{
+    list-style-type: none;
+}
+.links_a{
+    text-decoration: none;
+    font-size: var(--font-size-2);
+}
+.toggle{
+    visibility: hidden;
+}
+.toggle_lable::before{
+    content: " ";
+    position: absolute;
+    width: 3.125rem;
+    height: 1.5625rem;
+    background-color: var(--COLOUR-ONE);
+}
+.toggle_lable::after{
+    content: " ";
+    position: absolute;
+    top: .0625rem;
+    width: 1.5625rem;
+    height: 1.4375rem;
+    background-color: black;
+}
+
