--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,15 @@
 /* Global styles*/
 :root{
-  font-size: 10px;
 
   /* Colour Scheme */
   --COLOUR-ONE: #FFFFFF;
   --COLOUR-TWO: #1A181C;
   --COLOUR-THREE: #FF0000;
+
+  --font-size-1: 1rem;
+  --font-size-2: 1.25rem;
+  --font-size-3: 1.5625rem;
+  --font-size-4:2.1875rem;
 }
 *{
   padding: 0;
