--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,6 @@
 /* Global styles*/
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap');
+
 :root{
 
   /* Colour Scheme */
@@ -15,9 +17,11 @@
   padding: 0;
   margin: 0;
   color: #FFFFFF;
+  box-sizing: border-box;
 }
 body{
   background-color: var(--COLOUR-TWO);
+  font-family: 'Inter', sans-serif;
 }
 
 #root{
