--- a/src/Pages/landing/landing.module.css
+++ b/src/Pages/landing/landing.module.css
@@ -1,8 +1,13 @@
 /* Styling for the landing page */
 .section{
-    width: fit-content;
-    padding: 5rem 0;
-    
+    width: 100%;
+    padding: 10vh 0;
+    /* background-color: brown; */
+}
+.container{
+    /* background-color: black; */
+    width: min(100%,50rem);
+    margin: 0 auto;
 }
 .title{
     color: var(--COLOUR-THREE);
