--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,7 +1,7 @@
 /* Styling for the Header and Navigation */
 .navbar{
     width: 100%;
-    padding: 1rem 0;
+    padding: 2rem 0;
     
     display: flex;
     justify-content: flex-end;
@@ -23,7 +23,7 @@
 
 .links_a{
     text-decoration: none;
-    font-size: var(--font-size-2);
+    font-size: clamp(.625rem,4vw,var(--font-size-2));
 }
 
 .links_a_search{
