--- a/src/components/Search/search.module.css
+++ b/src/components/Search/search.module.css
@@ -2,23 +2,17 @@
 .input_container{
     display: flex;
     flex-direction: column;
-    width: 100%;
     padding: 2rem 0;
     margin: 0 auto;
-}
-.input_container_2{
-    display: flex;
-    flex-direction: column;
-    width: fit-content;
-    margin: 0 auto;
+    width: 100%;
+    /* background-color: aquamarine; */
 }
 .input{
     background-color: var(--COLOUR-TWO);
     border: 2px solid var(--COLOUR-ONE);
     height: 2.25rem;
-    width: 20rem;
-    min-width: 15rem;
-    align-self: flex-end;
+    width: min(100%,20rem);
+    align-self: center;
     overflow:auto;
     margin: 0 auto;
     padding: 1rem;
@@ -29,7 +23,8 @@
 .search{
     margin-top: .625rem;
     padding: .25em 1.5em;
-    /* align-self: flex-end; */
+    width: min(100%,20rem);
+    align-self: center; 
     background-color: var(--COLOUR-TWO);
     font-weight: 800;
     font-size: var(--font-size-2);
