--- a/src/Pages/landing/landing.module.css
+++ b/src/Pages/landing/landing.module.css
@@ -1,29 +1,8 @@
 /* Styling for the landing page */
-.section{
-    width: 100%;
-    padding: 10vh 0;
-    /* background-color: brown; */
+.landingpage{
+    height: 100%;
 }
-.container{
-    /* background-color: black; */
-    width: min(100%,50rem);
-    margin: 0 auto;
-}
-.title{
-    color: var(--COLOUR-THREE);
-    border-bottom: 2px solid var(--COLOUR-ONE);
-    width: fit-content;
-    font-size: clamp(1.5rem,5vw,var(--font-size-4));
-    text-align: center;
-    margin-bottom: 1rem;
-}
-.info{
-    list-style:upper-roman;
-    line-height: 2rem;
-    font-size: clamp(1rem,5vw,var(--font-size-2));
-    list-style: none;
-}
-.span{
-    border-bottom: 1px solid var(--COLOUR-THREE);
-}
+
+
+
 
