--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,49 +1,29 @@
 /* Styling for the Header and Navigation */
-.navbar{
+.Header{
     width: 100%;
-    padding: 2rem 0;
-    
+    background-color: aqua;
     display: flex;
-    justify-content: flex-end;
 }
 
-.navbar_list{
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    width: fit-content;
-    gap: 2rem;
-    
-}
 
-.links{
-    list-style-type: none;
-    
-}
 
-.links_a{
-    text-decoration: none;
-    font-size: clamp(.625rem,4vw,var(--font-size-2));
-}
 
-.links_a_search{
-    border-bottom: 2px solid var(--COLOUR-ONE);
-}
-
+/* toggle styling and logic */
 .input{
     display: none;
 }
-
 .toggle_dark{
+   
    display: none;
 }
-
 .input:checked ~ .toggle_light{
     display: none;
 }
-
 .input:checked ~ .toggle_dark{
     display:contents;
 }
+
+
+
 
 
