--- a/src/index.css
+++ b/src/index.css
@@ -11,13 +11,12 @@
 
   --font-size-1: 1rem;
   --font-size-2: 1.25rem;
-  --font-size-3: 1.5625rem;
-  --font-size-4:2.1875rem;
+  --font-size-3: clamp(1rem,2.5vw,1.5625rem);
+  --font-size-4:clamp(1.25rem,5vw,2.1875rem);/*2.1875rem;*/
 }
-*{
+*,::before,::after{
   padding: 0;
   margin: 0;
-  color: #FFFFFF;
   box-sizing: border-box;
 }
 body{
