--- a/src/components/Search/search.module.css
+++ b/src/components/Search/search.module.css
@@ -1,46 +1,45 @@
 /* Style for the Search component */
-.input_container{
-    width:fit-content;
-    margin: 0 auto;
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-    /* background-color: aquamarine; */
-    display: grid;
-    gap: 1rem;
-    grid-template-columns: auto auto ;
-    grid-template-areas: "input search";
+.search_container{
+    width: min(80rem,100%);
+    min-width: 20rem;
+    /* background-color: aqua; */
+    display: flex;
+    gap: .5rem;
+    padding: 2px 1rem;
     justify-content: center;
 }
+/* Style for the input */
 .input{
-    background-color: var(--COLOUR-TWO);
-    border: 2px solid var(--COLOUR-ONE);
-    padding: 1rem;
-    grid-area: input;
-    width: min(30rem,30vw);
-    min-width: 20rem;
+    background-color: var(--COLOUR-ONE);
+    border: 1px solid var(--COLOUR-FOUR);
+    text-align: center;
+    padding: 0.5rem 3.5rem;
+    color: var(--COLOUR-FOUR);
+    font-size: var(--font-size-3);
 }
 .input::placeholder{
-    text-align: center;
+    color: var(--COLOUR-FOUR);
 }
+/* Style for the Search button */
 .search{
-    background-color: var(--COLOUR-TWO);
-    font-weight: 800;
-    font-size: var(--font-size-2);
-    border: 2px solid var(--COLOUR-ONE);
-    grid-area: search;
-    /* width: max(100%,15rem); */
-    max-width: 30rem;
-    min-width: 10rem;
+    background-color: var(--COLOUR-ONE);
+    border: 3px solid var(--COLOUR-FOUR);
+    color: var(--COLOUR-FOUR);
+    padding: 0.5rem 1.5rem;
+    font-weight: 900;
+    font-size: var(--font-size-3);
 }
 .search:hover{
-    border: 3px solid lightblue;
+    border: 3px solid var(--COLOUR-THREE);
 }
-
-@media screen and (max-width: 700px){
-    .input_container{
-        grid-template-areas: "input""search";
+/* Changing flex direction to colum for mobile */
+@media screen and (max-width:425px) {
+    .search_container{
+        flex-direction: column;
+        padding: 2px 2rem;
     }
-    .search{
-        padding: .5rem 0;
+    .input{
+        font-size: var(--font-size-2);
     }
+    
 }
