--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,3 +1,7 @@
+.header_container{
+    display: flex;
+    justify-content: space-around;
+}
 .Header{
     background-color: var(--COLOUR-TWO);
     display: flex;
@@ -5,7 +9,8 @@
     justify-content: flex-end;
     padding:1rem;
     margin-top: 3rem;
-    width: min(80rem,100%);
+    width: 90%;
+    max-width: 80rem;
     /* z-index: 999; */
 }
 .title{
