progress on table

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@
   --COLOUR-TWO: #d3efbd;
   --COLOUR-THREE: #8b2635;
   --COLOUR-FOUR: #d2d4c8;
+  --COLOUR-FIVE: #FFFFFF;
 
   --font-size-1: 1rem;
   --font-size-2: clamp(0.75rem,4vw,1.25rem);
