--- a/src/components/Search/search.module.css
+++ b/src/components/Search/search.module.css
@@ -11,20 +11,20 @@
 /* Style for the input */
 .input{
     background-color: var(--COLOUR-ONE);
-    border: 1px solid var(--COLOUR-FOUR);
+    border: 1px solid var(--COLOUR-FIVE);
     text-align: center;
     padding: 0.5rem 3.5rem;
-    color: var(--COLOUR-FOUR);
+    color: var(--COLOUR-FIVE);
     font-size: var(--font-size-3);
 }
 .input::placeholder{
-    color: var(--COLOUR-FOUR);
+    color: var(--COLOUR-FIVE);
 }
 /* Style for the Search button */
 .search{
     background-color: var(--COLOUR-ONE);
-    border: 3px solid var(--COLOUR-FOUR);
-    color: var(--COLOUR-FOUR);
+    border: 3px solid var(--COLOUR-FIVE);
+    color: var(--COLOUR-FIVE);
     padding: 0.5rem 1.5rem;
     font-weight: 900;
     font-size: var(--font-size-3);
