--- a/src/components/Table/table.module.css
+++ b/src/components/Table/table.module.css
@@ -1,76 +1,121 @@
 /* Styling for the main container */
-.main_container{
+.mainContainer{
     display: flex;
-    justify-content: space-around;
-    margin: 1rem 0;
+    justify-content: center;
+    padding: 1rem 0 1rem 0;
+    width: 100%;
 }
-/* Styling for the table */
-.table_container{
-    display: flex;
+.tableContainer{
+    width: 30rem;
+    padding-left: 1rem;
+}
+/* Styling for the Compnay names container LEFT */
+.companyContainer{
+    height: 30rem;
+    overflow: hidden;
+    overflow-y: scroll;
     /* background-color: aqua; */
-    max-width: 80rem;
+}
+.companyContainer::-webkit-scrollbar{
+    visibility: hidden;
+}
+/* Styling for the company row and column*/
+.companyRow{
+    color: var(--COLOUR-FIVE);
+    width: 100%;
+    border: 3px solid var(--COLOUR-FIVE);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: .5rem;
+}
+.companyName{
+    font-size: var(--font-size-3);
+    border-bottom: 1px solid var(--COLOUR-FIVE);
+    padding: 1rem;
+    width: 100%;
+}
+.companyIndex{
+    margin-right: 1.5rem;
+}
+/* styling for the accordion for the company row and column */
+.companyInfo{
+    border: 1px solid var(--COLOUR-FIVE);
+    width: 97%;
+    margin: .5rem 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    display: none;
     
 }
-.table{
-    font-size: var(--font-size-3) ;
+.companystat{
+    width: 80%;
+    border-bottom: 1px solid var(--COLOUR-FIVE);
+    font-size: var(--font-size-2);
+    padding: .5rem .5rem .1rem .25rem;
+}
+.companystat1{
+    margin-top: 1rem;
+}
+.companystat3{
+    margin-bottom: 1rem;
+}
+.checkbox{
+    display: none;
+}
+.checkbox:checked + label + .companyInfo{
+    display: inline-flex;
+}
+/* Styling for the company info on the Right big screens */
+.tableSideInfoContainer{
+    border: 4px solid var(--COLOUR-FIVE);
     width: 30rem;
-    height: min(50vh,28rem);
-    overflow-y: scroll;
-    overflow-wrap: break-word;
-    display: inline-block;
-    border-spacing: .4rem;
-}
-
-.tablerow{
-    color: var(--COLOUR-FIVE);
-}
-.tablenumber{
-    padding-right: 1rem;
-}
-.tabledata{
-    border: 4px solid var(--COLOUR-FIVE);
-    padding: 1rem 5rem 1rem 2rem;
-}
-
-/* Styling for the stats section */
-.stats_container{
-    border: 4px solid var(--COLOUR-FIVE);
-    width: 27rem;
     display: flex;
     justify-content: center;
     align-items: center;
     color: var(--COLOUR-FIVE);
 }
-.stats{
-    width: 90%;
-    height: 90%;
+.tableSideInfoContainer2{
     border: 1px solid var(--COLOUR-FIVE);
-}
-.title{
-    border-bottom: 1px solid var(--COLOUR-FIVE);
-    padding: 1rem 0 0.25rem 0.5rem;
-    font-size: var(--font-size-3);
-}
-.statsinfo_container{
+    width: 95%;
+    height: 95%;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-.statsinfo{
-    padding: 2.25rem 0 .25rem 0.25rem;
-    width: 85%;
+.title{
     border-bottom: 1px solid var(--COLOUR-FIVE);
-    font-size: var(--font-size-2);
+    padding: 1rem 0 0 0.5rem;
+    font-size: var(--font-size-4);
+    width: 100%;
 }
-.statsinfo:first-child{
+.statinfo{
+    border-bottom: 1px solid var(--COLOUR-FIVE);
+    width: 90%;
+    padding: 1rem 0 0.5rem 1rem;
+    font-size: var(--font-size-3);
+}
+.statinfo_head{
+    font-weight: 700;
+    margin-right: 1rem;
+}
+.statinfo_head2{
+    margin-right: 2rem;
+}
+.statinfo:first-of-type{
     padding-top: 4rem;
 }
-.statstitle{
-    font-weight: 900;
-    padding-right: 1rem;
-    width: 20%;
-    /* background-color: aqua; */
+.statinfo{
+    padding-top: 2rem;
 }
-.statstitle2{
-    padding-right: 2rem;
+
+@media screen and (max-width:1022px) {
+    .tableSideInfoContainer{
+        display: none;
+    }
+    .tableContainer{
+        width: 40rem;
+    }  
 }
+
