--- a/src/Pages/landing/landing.module.css
+++ b/src/Pages/landing/landing.module.css
@@ -1,7 +1,53 @@
 /* Styling for the landing page */
+.section{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.content{
+    /* width: max-content; */
+    width: auto;
+}
 .landingpage{
     height: 100%;
+    display: flex;
+    flex-direction: column;
 }
+.text,.list{
+    color: var(--COLOUR-FIVE);
+
+}
+.textsections{
+    font-size: var(--font-size-3);
+    margin-left: 1.25rem;
+}
+/* Underline part of text */
+.underline{
+    border-bottom: 2px solid var(--COLOUR-THREE);
+}
+.list{
+    list-style:disc;
+    line-height: 2.5rem;
+}
+/* padding for both text sections */
+.textsection1{
+    padding: 10rem 0.5rem 5rem 0.5rem;
+}
+.textsection2{
+    padding: 5rem 0.5rem 5rem 0.5rem;
+}
+
+@media screen and (max-width: 1023px) {
+    .textsection1{
+        padding: 5rem 0.5rem 5rem 0.5rem;
+    }
+    
+}
+
+
+
+
 
 
 
