--- a/src/components/Footer/footer.module.css
+++ b/src/components/Footer/footer.module.css
@@ -2,11 +2,12 @@
 .footer_container{
     display: flex;
     justify-content: space-around;
+    margin-top: auto;
 }
 .footer{
-    background-color: var(--COLOUR-TWO);
+    background-color: var(--COLOUR-FOUR);
     width: 100%;
-    max-width: 90rem;
+    /* max-width: 90rem; */
     display: flex;
     flex-direction: column;
 }
