--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,33 @@
-body {
+/* Global styles*/
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap');
+
+:root{
+
+  /* Colour Scheme */
+  --COLOUR-ONE: #2e3532;
+  --COLOUR-TWO: #d3efbd;
+  --COLOUR-THREE: #8b2635;
+  --COLOUR-FOUR: #d2d4c8;
+  --COLOUR-FIVE: #FFFFFF;
+
+  --font-size-1: 1rem;
+  --font-size-2: clamp(0.75rem,4vw,1.25rem);
+  --font-size-3: clamp(1rem,2.5vw,1.5625rem);
+  --font-size-4:clamp(1.25rem,5vw,2.1875rem);/*2.1875rem;*/
+}
+*,::before,::after{
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
+}
+body{
+  background-color: var(--COLOUR-ONE);
+  font-family: 'Inter', sans-serif;
+  height: 100vh;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+#root{
+  height: 100vh;
 }
+
+
